# tinyengine

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  TODO.txt  init.toml  shader.inc
3rdlibs/catch2/: CMakeLists.txt
3rdlibs/glad/: CMakeLists.txt
3rdlibs/glad/include/glad/: glad.h
3rdlibs/glad/src/: glad.c
3rdlibs/miniaudio/: CMakeLists.txt  miniaudio.c
3rdlibs/nuklear/: CMakeLists.txt  nuklear_glfw_gl3.hpp  nuklear_sdl_gl3.h
3rdlibs/stb/: CMakeLists.txt
3rdlibs/tomlplusplus/: toml.hpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  copydll.cmake  shader2inc.cmake
demo/: CMakeLists.txt
demo/cmake/: setup_demo.cmake
demo/helloworld/: 2d_draw.cpp  2d_draw.hpp  3d_draw.cpp  3d_draw.hpp  CMakeLists.txt  gamestart.cpp  gamestart.hpp  init.toml  main.cpp  sound_play.cpp  sound_play.hpp  testscene.cpp  testscene.hpp  uiscene.cpp  uiscene.hpp
demo/helloworld/src/: 2d_draw.cpp  2d_draw.hpp  3d_draw.cpp  3d_draw.hpp  gamestart.cpp  main.cpp  sound_play.cpp  sound_play.hpp  testscene.cpp  testscene.hpp
demo/physical/: CMakeLists.txt  move_behavior.hpp  scene.cpp
demo/small_man/: CMakeLists.txt  init.toml
demo/small_man/resources/raw/: role-Sheet.aseprite  role.aseprite  sand.aseprite  tilesheet.aseprite
demo/small_man/src/scenes/: start_scene.cpp
demo/small_man/src/scripts/: controller.cpp  role_behavior.cpp
engine/: engine.hpp
engine/animation/: animation.hpp
engine/components/: node.hpp  sprite.hpp  transform2d.hpp
engine/core/: cache.hpp  configer.hpp  context.hpp  dllexport.hpp  glhelper.hpp  init_config.hpp  pch.hpp  random.hpp  scene.hpp  timer.hpp  tool.hpp  video.hpp  vmath.hpp
engine/debug/: collider_outline.hpp  console.hpp  property_watcher.hpp  scene_tree.hpp
engine/ecs/: behavior.hpp  component.hpp  entity.hpp  node.hpp  system.hpp  world.hpp
engine/input/: input.hpp  keycode.hpp  mouse.hpp
engine/physics/: physics.hpp  physics_system.hpp
engine/renderer/: camera.hpp  font.hpp  image.hpp  mesh.hpp  render_system.hpp  renderer.hpp  shader.hpp  texture.hpp  tilesheet.hpp
engine/sound/: sound.hpp
engine/ui/: area.hpp  button.hpp  checkbox.hpp  edit.hpp  group.hpp  image.hpp  label.hpp  layout.hpp  option.hpp  property.hpp  recttransform.hpp  text.hpp  tree.hpp  ui.hpp  ui_system.hpp  window.hpp
include/engine/components/: behavior.hpp  node.hpp
include/engine/core/: configer.hpp  context.hpp  dllexport.hpp  glhelper.hpp  log.hpp  pch.hpp  scene.hpp  timer.hpp  tool.hpp  vmath.hpp
include/engine/ecs/: behavior.hpp  component.hpp  entity.hpp  node.hpp  system.hpp  world.hpp
include/engine/input/: input.hpp  keycode.hpp  mouse.hpp
include/engine/renderer/: camera.hpp  image.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp  tilesheet.hpp
include/engine/ui/: button.hpp  checkbox.hpp  layout.hpp  recttransform.hpp  ui.hpp  ui_system.hpp  window.hpp
include/game/: gamestart.hpp  uiscene.hpp
shader/: shader.frag  shader.vert
src/: entry.cpp
src/animation/: animation.cpp
src/components/: node.cpp  sprite.cpp  transform2d.cpp
src/core/: configer.cpp  context.cpp  entry.cpp  event.cpp  glhelper.cpp  init_config.cpp  random.cpp  scene.cpp  timer.cpp  video.cpp  vmath.cpp
src/debug/: collider_outline.cpp  console.cpp  property_watcher.cpp  scene_tree.cpp
src/ecs/: component.cpp  world.cpp
src/engine/core/: configer.cpp  context.cpp  entry.cpp  log.cpp  scene.cpp  timer.cpp  tool.cpp  vmath.cpp
src/engine/ecs/: world.cpp
src/engine/input/: input.cpp  mouse.cpp
src/engine/renderer/: camera.cpp  image.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  tilesheet.cpp
src/engine/ui/: button.cpp  checkbox.cpp  layout.cpp  nuklear.cpp  ui_system.cpp  window.cpp
src/game/: gamestart.cpp  main.cpp  uiscene.cpp
src/input/: input.cpp  mouse.cpp
src/physics/: physics.cpp  physics_system.cpp
src/renderer/: camera.cpp  font.cpp  image.cpp  mesh.cpp  render_system.cpp  renderer.cpp  shader.cpp  texture.cpp  tilesheet.cpp
src/sound/: sound.cpp
src/ui/: button.cpp  checkbox.cpp  edit.cpp  group.cpp  image.cpp  label.cpp  layout.cpp  nuklear.cpp  option.cpp  property.cpp  text.cpp  tree.cpp  ui.cpp  ui_system.cpp  window.cpp
tools/editor/: CMakeLists.txt
tools/editor/src/: main.cpp
tools/editor/src/reflect/: components_refl.cpp  components_refl.hpp  reflect_wrap.cpp  reflect_wrap.hpp
tools/editor/src/scenes/: editor_scene.cpp  editor_scene.hpp
